--- a/deno.json
+++ b/deno.json
@@ -31,6 +31,7 @@
 		"~/": "./",
 		"fresh": "jsr:@fresh/core@^2.0.0-alpha.27",
 		"@fresh/plugin-tailwind": "jsr:@fresh/plugin-tailwind@^0.0.1-alpha.7",
+		"jose": "https://deno.land/x/jose@v5.9.6/index.ts",
 		"preact": "npm:preact@^10.25.2",
 		"@preact/signals": "npm:@preact/signals@^1.3.1",
 		"tailwindcss": "npm:tailwindcss@^3.4.3"
