feat: report message (#2)
* `report-message` command

* prevent self-report

* handle archived, locked or missing report thread

* revert self-report logic

* pass resolved message to function args

--- a/deno.json
+++ b/deno.json
@@ -23,6 +23,7 @@
 	],
 	"imports": {
 		"@discordjs/core": "npm:@discordjs/core@^2.0.0/http-only",
+		"@discordjs/formatters": "npm:@discordjs/formatters@^0.5.0",
 		"@discordjs/rest": "npm:@discordjs/rest@^2.4.0",
 		"@std/encoding": "jsr:@std/encoding@^1.0.6",
 		"@std/fs": "jsr:@std/fs@^1.0.7",
@@ -41,7 +42,8 @@
 			"dom",
 			"dom.asynciterable",
 			"dom.iterable",
-			"deno.ns"
+			"deno.ns",
+			"deno.unstable"
 		],
 		"jsx": "precompile",
 		"jsxImportSource": "preact",
@@ -53,5 +55,8 @@
 			"html",
 			"head"
 		]
-	}
+	},
+	"unstable": [
+		"kv"
+	]
 }
