.env.example update (#8)
* welcome embed

* message format update

* .env.example update

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,10 @@ BOT_TOKEN=
 REDIRECT_URI=
 
 GUILD_ID=
+MEMBER_ROLE_ID=
 MODERATOR_ROLE_ID=
 REPORT_CHANNEL_ID=
+WELCOME_CHANNEL_ID=
 
 JWT_PUBLIC_KEY=
 JWT_PRIVATE_KEY=
