--- a/deno.json
+++ b/deno.json
@@ -36,7 +36,7 @@
 		"jose": "https://deno.land/x/jose@v5.9.6/index.ts",
 		"preact": "npm:preact@^10.25.2",
 		"@preact/signals": "npm:@preact/signals@^1.3.1",
-		"tailwindcss": "npm:tailwindcss@^3.4.3"
+		"tailwindcss": "npm:tailwindcss@3.4.17"
 	},
 	"compilerOptions": {
 		"lib": [
